--- a/css/cards.css
+++ b/css/cards.css
@@ -1,10 +1,86 @@
-*, :after, :before {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+#aboutSection {
+  background-color: #1e1f26;
+}
+
+.aboutSection {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5rem 0;
+}
+
+.aboutHeading {
+  margin-bottom: 5rem;
+}
+
+.aboutHeading h1 {
+  font-size: 2.5rem;
+  text-align: center;
+  color: #f35626;
+}
+
+.underline {
+  width: 50px;
+  height: 3px;
+  background-color: #f35626;
+  margin: 0 auto;
+}
+
+.aboutContent {
+  font-size: 1.2rem;
+  text-align: center;
+  max-width: 800px;
+  margin: 0 auto;
+  color: #fff;
+}
+
+.card {
+  border: none;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.profile-card-4 {
+  position: relative;
+  overflow: hidden;
+}
+
+.profile-card-4 img {
+  width: 100%; /* Make the image fill the container */
+  height: auto; /* Maintain aspect ratio */
+  border-radius: 10px 10px 0 0;
+}
+
+.profile-content {
+  padding: 20px;
+}
+
+.profile-name h3,
+.profile-name h5 {
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+.card-text {
+  font-size: 1rem;
+  color: #ccc;
+}
+
+/* Responsive layout adjustments */
+@media (max-width: 768px) {
+  .aboutContent {
+    font-size: 1rem;
   }
-  
-  /* Patch for CodePen only */
-  .uk-cover-container img {
-    object-fit: cover;
+
+  .aboutHeading h1 {
+    font-size: 2rem;
   }
-  
+
+  .card {
+    margin-bottom: 2rem;
+  }
+}
